# dapr-university-instruqt

./: .gitignore  README.md
tools/github-collector/: README.md  collect_github_data.py  pyproject.toml
tools/github-collector/data/dapr/components-contrib/: manifest.json
tools/github-collector/data/dapr/components-contrib/issues/: 2190.json  2214.json  2231.json  2258.json  2274.json  2279.json  2280.json  2301.json  2306.json  2317.json  2329.json  2385.json  2397.json  2421.json  2476.json  2524.json  2537.json  2557.json  2566.json  2567.json  2591.json  2621.json  2622.json  2623.json  2625.json  2626.json  2634.json  2635.json  2686.json  2727.json  (+70 more)
tools/github-collector/data/dapr/dapr/: manifest.json
tools/github-collector/data/dapr/dapr-agents/: manifest.json
tools/github-collector/tests/: test_cli.py  test_collect_flat.py  test_main.py  test_neighborhood.py  test_references.py  test_retry.py  test_serialize.py  test_write.py
tools/track-tester/: .gitignore  README.md  pyproject.toml
tools/track-tester/ci/: setup-dapr-101.sh  setup-dapr-workflow-aspire.sh  setup-dapr-workflow.sh
tools/track-tester/docsync/: check_doc_sync.py
tools/track-tester/docsync/tests/: test_coverage.py  test_extract.py
tools/track-tester/libraries/: assignment_blocks.py
tools/track-tester/libraries/tests/: test_apply.py  test_manifest.py  test_parse.py
tools/track-tester/resources/: dapr.resource  workflow.resource
tools/track-tester/resources/tests/: smoke.robot
tools/track-tester/variables/: dapr_101.py  dapr_101.yaml  dapr_workflow.py  dapr_workflow_aspire.py
(+481 files in other folders)
